prety much finished preview. Points of sup-exercies get summed up, Categories presented as a single comma-separated string

--- a/examples/lagrange.Rmd
+++ b/examples/lagrange.Rmd
@@ -140,5 +140,5 @@ extype: num
 exsolution: `r fmt(sol)`
 exname: Lagrange cost minimization
 extol: 0.01
-expoints: 100
-exsection: default
+exsection: default|plot
+expoints: 2
