fixed plots not working when calling rim globally

--- a/R/templates/tgm_maxima.tex
+++ b/R/templates/tgm_maxima.tex
@@ -137,25 +137,18 @@
 
 \vspace*{5mm}
 
-\par{\underline{Information zum Kompetenzbereich / zu den Kompetenzbereichen}, die Gegenstand der Schularbeit sind: Die Beispiele dieser Schularbeit beziehen sich auf den Kompetenzbereich \textbf{\myKomp}.
-Zur positiven Absolvierung der Schularbeit müssen die Anforderung betreffend die Erfassung und Anwendung des Lehrstoffes sowie betreffend die Durchführung der Aufgaben in den wesentlichen Bereichen (d.h. in den Grundkompetenzen dieses Kompetenzbereiches) überwiegend erfüllt sein. Das Beispiel 1 dieser Schularbeit enthält ausschließlich Teilaufgaben, mit denen die Erfüllung der Grundkompetenzen dieses Kompetenzbereiches nachgewiesen werden kann.} \\[5mm]
-
 \begin{tcolorbox}[arc=0mm,  standard jigsaw, opacityback=0, boxrule=1pt]
-Der Nachweis der Erfüllung der Grundkompetenzen des Kompetenzbereiches \textbf{\myKomp} wurde \\
-  \begin{center}
-    \radiobutton \, erbracht \quad \radiobutton \, nicht erbracht
-  \end{center}
+\begin{center}
+Für das folgende Beispiel / Für die folgenden Beispiele \\
+ist die Benutzung von \textit{wxMaxima} statthaft und empfohlen
+\end{center}
 \end{tcolorbox}
 
 \begin{tcolorbox}[arc=0mm,  standard jigsaw, opacityback=0, boxrule=1pt]
-Gesamtnote: \\
-\end{tcolorbox}
-
-\begin{tcolorbox}[arc=0mm,  standard jigsaw, opacityback=0, boxrule=1pt]
-Kentnissnahme des/der \\
-Erziehungsberechtigten \\
-oder der eigenberechtigten \\
-Schüler
+\textit{Beachte bitte, dass bei Beispielen, die mit elektronischen Hilfsmitteln gelöst werden,
+zusätzlich zur korrekten Lösung ein Lösungsweg anzuführen ist.
+Dies kann in mathematischer Schreibweise erfolgen oder durch Angabe der Methode
+inclusive allen notwendigen Parametern!}
 \end{tcolorbox}
 
 }
