if maxima-split start enumeration in maxima.tex at respective count

--- a/R/templates/tgm_solution.tex
+++ b/R/templates/tgm_solution.tex
@@ -71,12 +71,14 @@
 \newcommand{\Komp}[1]{\def\@Komp{#1}}
 \newcommand{\Class}[1]{\def\@Class{#1}}
 \newcommand{\TableDir}[1]{\def\@TableDir{#1}}
+\newcommand{\EnumStartAt}[1]{\def\@EnumStartAt{#1}}
 \ID{00001}
 \Date{DD. MM. YYYY}
 \Title{Schularbeit}
 \Komp{S03B: Test}
 \Class{2xHIT}
 \TableDir{placeholder}
+\EnumStartAt{1}
 
 %% \exinput{header}
 
@@ -86,6 +88,7 @@
 \newcommand{\myKomp}{\@Komp}
 \newcommand{\myClass}{\@Class}
 \newcommand{\myTableDir}{\@TableDir}
+\newcommand{\myEnumStartAt}{\@EnumStartAt}
 \makeatother
 
 %% headings
