--- a/R/templates/tgm_maxima.tex
+++ b/R/templates/tgm_maxima.tex
@@ -84,12 +84,14 @@
 \newcommand{\Komp}[1]{\def\@Komp{#1}}
 \newcommand{\Class}[1]{\def\@Class{#1}}
 \newcommand{\TableDir}[1]{\def\@TableDir{#1}}
+\newcommand{\EnumStartAt}[1]{\def\@EnumStartAt{#1}}
 \ID{00001}
 \Date{DD. MM. YYYY}
 \Title{Schularbeit}
 \Komp{S03B: Test}
 \Class{2xHIT}
 \TableDir{placeholder}
+\EnumStartAt{1}
 
 %% \exinput{header}
 
@@ -99,6 +101,7 @@
 \newcommand{\myKomp}{\@Komp}
 \newcommand{\myClass}{\@Class}
 \newcommand{\myTableDir}{\@TableDir}
+\newcommand{\myEnumStartAt}{\@EnumStartAt}
 \makeatother
 
 %% headings
@@ -155,6 +158,7 @@ inclusive allen notwendigen Parametern!}
 \newpage
 
 \begin{enumerate}[leftmargin=*]
+\setcounter{enumi}{\myEnumStartAt}
 
 %% \exinput{exercises}
 
