made InclMaxima automatic, if maxima-exercises are included

--- a/R/templates/tgm_solution.tex
+++ b/R/templates/tgm_solution.tex
@@ -72,6 +72,7 @@
 \newcommand{\Class}[1]{\def\@Class{#1}}
 \newcommand{\TableDir}[1]{\def\@TableDir{#1}}
 \newcommand{\EnumStartAt}[1]{\def\@EnumStartAt{#1}}
+\newcommand{\InclMaxima}[1]{\def\@InclMaxima{#1}}
 \ID{00001}
 \Date{DD. MM. YYYY}
 \Title{Schularbeit}
@@ -79,6 +80,7 @@
 \Class{2xHIT}
 \TableDir{placeholder}
 \EnumStartAt{1}
+\InclMaxima{false}
 
 %% \exinput{header}
 
