--- a/R/templates/tgm_exam.tex
+++ b/R/templates/tgm_exam.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt,a4paper]{article}
 
 %% packages
-\usepackage{a4wide,color,verbatim,Sweave,url,xargs,amsmath,tcolorbox,tikz,tabularx,enumitem}
+\usepackage{a4wide,color,verbatim,Sweave,url,xargs,amsmath,tcolorbox,tikz,tabularx,enumitem, ifthen}
 
 \makeatletter
 \newcommand*{\radiobutton}{%
@@ -84,12 +84,14 @@
 \newcommand{\Komp}[1]{\def\@Komp{#1}}
 \newcommand{\Class}[1]{\def\@Class{#1}}
 \newcommand{\TableDir}[1]{\def\@TableDir{#1}}
+\newcommand{\InclMaxima}[1]{\def\@InclMaxima{#1}}
 \ID{00001}
 \Date{DD. MM. YYYY}
 \Title{Schularbeit}
 \Komp{S03B: Test}
 \Class{2xHIT}
 \TableDir{placeholder}
+\InclMaxima{false}
 
 %% \exinput{header}
 
@@ -99,6 +101,8 @@
 \newcommand{\myKomp}{\@Komp}
 \newcommand{\myClass}{\@Class}
 \newcommand{\myTableDir}{\@TableDir}
+\newboolean{myInclMaxima}
+\setboolean{myInclMaxima}{\@InclMaxima}
 \makeatother
 
 %% headings
@@ -136,6 +140,15 @@
 \hrule
 
 \vspace*{5mm}
+
+\ifthenelse{\boolean{myInclMaxima}}{%
+\begin{tcolorbox}[arc=0mm,  standard jigsaw, opacityback=0, boxrule=1pt]
+\begin{center}
+Für das folgende Beispiel / Für die folgenden Beispiele \\
+ist die Benutzung von \textit{wxMaxima} statthaft und empfohlen
+\end{center}
+\end{tcolorbox}%
+}{}
 
 \par{\underline{Information zum Kompetenzbereich / zu den Kompetenzbereichen}, die Gegenstand der Schularbeit sind: Die Beispiele dieser Schularbeit beziehen sich auf den Kompetenzbereich \textbf{\myKomp}.
 Zur positiven Absolvierung der Schularbeit müssen die Anforderung betreffend die Erfassung und Anwendung des Lehrstoffes sowie betreffend die Durchführung der Aufgaben in den wesentlichen Bereichen (d.h. in den Grundkompetenzen dieses Kompetenzbereiches) überwiegend erfüllt sein. Das Beispiel 1 dieser Schularbeit enthält ausschließlich Teilaufgaben, mit denen die Erfüllung der Grundkompetenzen dieses Kompetenzbereiches nachgewiesen werden kann.} \\[5mm]
