--- a/examples/tstat.Rmd
+++ b/examples/tstat.Rmd
@@ -44,5 +44,5 @@ extype: num
 exsolution: `r fmt(abs(tstat), 3)`
 exname: t statistic
 extol: 0.01
-exsection: default
+exsection: default|maxima
 expoints: 1
